--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+      initial-scale="1.0"
     />
-
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
